# PhotoPainter

./: .gitignore  CMakeLists.txt  README.md  build.bat  main.c  photopainter_kuangtc.uf2
.claude/: settings.local.json
examples/: CMakeLists.txt  EPD_7in3f_test.c  run_File.c  run_File.h
lib/Config/: CMakeLists.txt  hw_config.c
lib/FatFs_SPI/: CMakeLists.txt
lib/FatFs_SPI/sd_driver/: sd_spi.c
lib/FatFs_SPI/src/: get_fattime.c
lib/GUI/: GUI_BMPfile.c  GUI_Paint.c
lib/RTC/: waveshare_PCF85063.c
